add um novo microsserviço na arquitetura - endpoint mult

--- a/arquitetura/microsservicos/nginx/nginx.conf
+++ b/arquitetura/microsservicos/nginx/nginx.conf
@@ -8,6 +8,7 @@ http {
     upstream ping {
         server microsservicos_ping_1:5000;
         server microsservicos_ping_2:5000;
+        server microsservicos_ping_3:5000;
      }
 
     upstream calc{
@@ -21,6 +22,11 @@ http {
     upstream sub{
         server microsservicos_sub_1:5000;
     }
+
+    upstream mult{
+        server microsservicos_mult_1:5000;
+    }
+
 
 # This server accepts all traffic to port 80 and passes it to the upstream.
      server {
@@ -41,6 +47,10 @@ http {
 
          location /sub {
               proxy_pass http://sub;
+         }
+
+         location /mult {
+              proxy_pass http://mult;
          }
      }
 }
