--- a/arquitetura/microsservicos/nginx/nginx.conf
+++ b/arquitetura/microsservicos/nginx/nginx.conf
@@ -5,10 +5,15 @@ events {}
 
 http {
 
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$upstream_addr"';
+
+    access_log /var/log/nginx/access.log main;
+
     upstream ping {
         server microsservicos_ping_1:5000;
         server microsservicos_ping_2:5000;
-        server microsservicos_ping_3:5000;
      }
 
     upstream calc{
@@ -24,7 +29,9 @@ http {
     }
 
     upstream mult{
-        server microsservicos_mult_1:5000;
+        server microsservicos_mult_1:5000 weight=3;
+        server microsservicos_mult_2:5000 weight=1;
+        server microsservicos_mult_3:5000 backup;
     }
 
 
@@ -32,6 +39,7 @@ http {
      server {
          listen 80;
          server_name app.com;
+          access_log /var/log/nginx/access.log main;
 
          location /ping {
               proxy_pass http://ping;
@@ -47,10 +55,12 @@ http {
 
          location /sub {
               proxy_pass http://sub;
+              access_log /var/log/nginx/access.log main;
          }
 
          location /mult {
               proxy_pass http://mult;
+              access_log /var/log/nginx/access.log main;
          }
      }
 }
